apps/base/it-tools/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`it-tools.cruznet.io`)
    kind: Rule
    services:
    - name: it-tools
      kind: Service
      port: 80
  tls:
    secretName: it-tools-cert
